# amaterus_crawler

./: .gitignore  README.md  pyproject.toml  schema.graphql
amaterus_crawler/: cli.py
amaterus_crawler/command/: __init__.py  run.py  server.py
amaterus_crawler/config/: config_parser.py  global_config.py  server_config.py
amaterus_crawler/config/runner_config/: __init__.py  download_youtube_channel_icon_config.py  update_youtube_channel_config.py
amaterus_crawler/config/task_config/: __init__.py  download_youtube_channel_thumbnail_config.py  download_youtube_video_config.py  download_youtube_video_thumbnail_config.py  search_youtube_channel_video_config.py  update_youtube_channel_config.py  update_youtube_video_detail_config.py
amaterus_crawler/graphql_client/: __init__.py  client.py  create_youtube_channel.py  create_youtube_channel_details.py  create_youtube_channel_thumbnail_object.py  create_youtube_video_details.py  create_youtube_video_object.py  create_youtube_video_thumbnail_object.py  create_youtube_videos.py  enums.py  get_downloadable_youtube_channel_thumbnails.py  get_downloadable_youtube_video_thumbnails.py  get_downloadable_youtube_videos.py  get_updatable_youtube_channels.py  get_updatable_youtube_videos.py  input_types.py  upsert_youtube_videos.py
amaterus_crawler/runner/: __init__.py  base.py
amaterus_crawler/runner/youtube_channel_icon_download_runner/: __init__.py  _impl.py
amaterus_crawler/runner/youtube_channel_update_runner/: __init__.py  _impl.py
amaterus_crawler/server/routers/: __init__.py
amaterus_crawler/task/: __init__.py  base.py
amaterus_crawler/task/youtube_channel_icon_download_task/: __init__.py  _impl.py
amaterus_crawler/task/youtube_channel_thumbnail_download_task/: __init__.py  _impl.py
amaterus_crawler/task/youtube_channel_update_task/: __init__.py  _impl.py
amaterus_crawler/task/youtube_channel_video_search_task/: __init__.py  _impl.py
amaterus_crawler/task/youtube_video_detail_update_task/: __init__.py  _impl.py
amaterus_crawler/task/youtube_video_download_task/: __init__.py  _impl.py
amaterus_crawler/task/youtube_video_thumbnail_download_task/: __init__.py  _impl.py
amaterus_crawler/utility/youtube_api/: search.py
amaterus_crawler/video_downloader/: base.py  youtube_s3.py
amaterus_crawler/video_finder/youtube_live/: base.py
amaterus_crawler/video_inspection/: model.py
amaterus_crawler/video_inspection/ffprobe/: model.py
amaterus_crawler/video_inspection/mimetype/: model.py
amaterus_crawler/video_inspection/reader/: base.py  binaryio.py
amaterus_crawler/video_storage/reader/: base.py  s3.py
dev_scripts/: fetch_graphql_engine_schema.py
graphql_queries/: create_youtube_channel.graphql  create_youtube_channel_details.graphql  create_youtube_channel_thumbnail_object.graphql  create_youtube_video_details.graphql  create_youtube_video_object.graphql  create_youtube_video_thumbnail_object.graphql  get_downloadable_youtube_channel_thumbnails.graphql  get_downloadable_youtube_video_thumbnails.graphql  get_downloadable_youtube_videos.graphql  get_updatable_youtube_channels.graphql  get_updatable_youtube_videos.graphql  upsert_youtube_videos.graphql
(+104 files in other folders)
