[tool.pysen]
version = "0.11"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"

  [[tool.pysen.lint.mypy_targets]]
    paths = ["."]


[tool.poetry]
name = "amaterus-crawler"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
yt-dlp = "^2024.4.9"
boto3 = "^1.34.98"
ffmpeg-python = "^0.2.0"
pydantic = "^2.7.1"
python-magic = "^0.4.27"
httpx = "^0.27.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pysen = "^0.11.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"
mypy = "^1.10.0"
pytest = "^8.2.0"
boto3-stubs = {extras = ["s3"], version = "^1.34.98"}
types-pyyaml = "^6.0.12.20240311"
ariadne-codegen = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
